# library-objects

./: .buildinfo  .gitignore  CHANGELOG.md  Makefile  Package.swift  README.md  api.html  db.html  genindex.html  index.html  models.html  objects.inv  pytest.ini  report.xml  schemas.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
_modules/: index.html
_sources/: api.rst.txt  db.rst.txt  index.rst.txt  models.rst.txt  schemas.rst.txt
_static/: documentation_options.js
docs/: api.rst  conf.py  db.rst  index.rst  models.rst  schemas.rst
requirements/: dev.in  dev.txt  docs.in  docs.txt  pkg.in  pkg.txt  tests.in  tests.txt
scripts/: update-requirements.sh
src/: report.xml
tests/: __init__.py  test_author_db_schema.py  test_author_document.py  test_author_model.py  test_author_schema.py  test_author_serialization.py  test_contribution_db_schema.py  test_contribution_document.py  test_contribution_model.py  test_packages.py  test_person_db_schema.py  test_person_model.py  test_publisher_db_schema.py  test_publisher_document.py  test_publisher_model.py  test_publisher_schema.py  test_publisher_serialization.py  test_review_db_schema.py  test_review_model.py  test_review_schema.py  test_review_serialization.py  test_studio_db_schema.py  test_studio_document.py  test_studio_model.py  test_studio_schema.py  test_studio_serialization.py  test_system_db_schema.py  test_system_document.py  test_system_model.py  test_system_schema.py  test_system_serialization.py  test_tag_model.py  (+12 more)
(+179 files in other folders)
