[bdist_wheel]
universal = 1

[metadata]
name = sweetrpg-library-model
version = attr: setup:__version__
url = https://sweetrpg.com
project_urls =
    Documentation = https://sweetrpg.github.io/library-model
license = MIT
author = Paul Schifferer
author_email = dm@sweetrpg.com
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_required = >= 3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sweetrpg-library-model = sweetrpg_library_model.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    sweetrpg_library_model
    tests

[coverage:paths]
source =
    src
    */site-packages

[semantic_release]
version_variable = setup.py:__version__,sweetrpg_library_model/__init__.py:__version__
branch = develop
